change API objects returned by tags and iovs GET methods.
